--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,10 +64,23 @@ button {
   background: #FFFFFF 0% 0% no-repeat padding-box !important;
   border-radius: 26px;
   color: black !important;
-  opacity: 1;
+  font: normal normal bold 12px/14px Josefin Sans;
+letter-spacing: 1.8px;
+color: #221F20;
+text-transform: uppercase;
+opacity: 1;
 }
 
 .icon {
   font-size: 1.5rem !important;
   margin:1rem;
+}
+
+.footer {
+  background-color: #8DB9CA;
+  color: #FFFFFF;
+}
+
+.first {
+  border-bottom: 3px dashed #FFFFFF;
 }
