--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,7 +49,7 @@ code {
 
 
 p {
-  margin: 0.8rem !important;
+  margin-bottom: 0rem !important;
 }
 
 h5 {
@@ -58,6 +58,7 @@ h5 {
 
 h1, h4 {
   color: #FFFFFF;
+  margin-bottom: 0rem !important;
 }
 
 button {
@@ -81,6 +82,8 @@ opacity: 1;
   color: #FFFFFF;
 }
 
-.first {
+hr {
+  color: #8DB9CA;
   border-bottom: 3px dashed #FFFFFF;
+  
 }
