--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,7 @@ h1, h4 {
   opacity: 1;
   --bs-btn-padding-x: 2rem !important;
   --bs-btn-padding-y: 0.7rem !important;
+  border: 1px solid #221F20;
 }
 
 .icon {
@@ -161,4 +162,35 @@ h6 {
   letter-spacing: 0.7px;
   color: #FFFFFF;
   text-transform: uppercase;
+}
+
+.t5 {
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  color: #221F20;
+  text-transform: uppercase;
+}
+
+.t6 {
+  font-weight: bold;
+  font-size: 40px;
+  color: #221F20;
+  text-transform: uppercase;
+  line-height: normal;
+  margin: 1rem !important;
+}
+
+.section2 {
+  background-color: #F3F7F9;
+}
+
+.section8 {
+  background-color: #EFF5F7;
+}
+
+.t7 {
+  font-size: 36px;
+  font-weight: bold;
+  letter-spacing: 0.72px;
+color: #221F20;
 }
