--- a/client/src/index.css
+++ b/client/src/index.css
@@ -339,3 +339,8 @@ a {
   text-decoration: none;
   color:#659AB1;
 }
+
+.card-body {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+}
