--- a/client/src/index.css
+++ b/client/src/index.css
@@ -344,3 +344,8 @@ a {
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
 }
+
+.postuser {
+  background-color: #84AEC1;
+  height: 92.5vh;
+}
