--- a/client/src/index.css
+++ b/client/src/index.css
@@ -357,3 +357,14 @@ td {
 .carousel-control-prev-icon, .carousel-control-next-icon, .carousel-indicators {
   visibility: hidden !important;
 }
+
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
